only 12 and 20 layers

--- a/notebooks/SAE-multilayer.ipynb
+++ b/notebooks/SAE-multilayer.ipynb
@@ -5,6 +5,7 @@
    "id": "00b4fdf9",
    "metadata": {},
    "source": [
+    "\n",
     "# 🎓 ECE685 Project 2: Multi-Layer SAE-Guided LLM Safety\n",
     "\n",
     "## Exploring Sparsity Across Multiple Layers via Sparse Autoencoders\n",
@@ -339,7 +340,7 @@
     "print(f\"  Batch sizes: data={CONFIG.data_batch_size}, steering={CONFIG.steering_batch_size}\")\n",
     "print(f\"  Steering samples: {CONFIG.steering_samples}\")\n",
     "print(f\"  Steering ratios (of ‖h‖): {CONFIG.steering_strength_ratios}\")\n",
-    "n_modes = 3  # layer_12, layer_20, multi\n",
+    "n_modes = 2  # layer_12, layer_20 (no multi - saves 33% steering time)\n",
     "print(f\"  Total steering generations: {CONFIG.steering_samples} × {len(CONFIG.steering_strength_ratios)} × {n_modes} modes × 2 tasks = {CONFIG.steering_samples * len(CONFIG.steering_strength_ratios) * n_modes * 2}\")"
    ]
   },
@@ -2042,12 +2043,12 @@
     "def run_steering_at_strength_multilayer(prompts: list, ground_truths: list, task: str,\n",
     "                                         steering_vectors: Dict[int, torch.Tensor],\n",
     "                                         alpha: float, max_samples: int,\n",
-    "                                         steering_mode: str = 'multi') -> list:\n",
+    "                                         steering_mode: str = 'layer_12') -> list:\n",
     "    \"\"\"\n",
     "    Run steering experiment at a single α value with multi-layer support.\n",
     "    \n",
     "    Args:\n",
-    "        steering_mode: 'layer_12', 'layer_20', or 'multi' (both layers)\n",
+    "        steering_mode: 'layer_12' or 'layer_20'\n",
     "    \"\"\"\n",
     "    results = []\n",
     "    test_prompts = prompts[:max_samples]\n",
@@ -2064,7 +2065,7 @@
     "        elif steering_mode == 'layer_20':\n",
     "            vecs = {20: steering_vectors[20]} if 20 in steering_vectors else None\n",
     "            strengths = {20: alpha} if vecs else None\n",
-    "        else:  # 'multi'\n",
+    "        else:  # layer_20\n",
     "            vecs = steering_vectors\n",
     "            strengths = {layer: alpha for layer in steering_vectors.keys()}\n",
     "    \n",
@@ -2116,7 +2117,7 @@
     "    print(f\"{'='*60}\")\n",
     "    print(f\"  Samples: {max_samples}\")\n",
     "    print(f\"  α values: {[f'{a:.2f}' for a in alphas]}\")\n",
-    "    print(f\"  Modes: layer_12, layer_20, multi\")\n",
+    "    print(f\"  Modes: layer_12, layer_20\")\n",
     "    \n",
     "    # Build steering vectors for each layer using that layer's features\n",
     "    steering_vectors = {}\n",
@@ -2151,7 +2152,7 @@
     "    }\n",
     "    \n",
     "    # Test each steering mode\n",
-    "    for mode in ['layer_12', 'layer_20', 'multi']:\n",
+    "    for mode in ['layer_12', 'layer_20']:\n",
     "        print(f\"\\n  === STEERING MODE: {mode.upper()} ===\")\n",
     "        all_results['per_mode'][mode] = {}\n",
     "        \n",
@@ -2399,7 +2400,7 @@
     "\n",
     "n_alphas = len(STEERING_ALPHAS)\n",
     "n_samples = CONFIG.steering_samples\n",
-    "n_modes = 3  # layer_12, layer_20, multi\n",
+    "n_modes = 2  # layer_12, layer_20 (no multi - saves 33% steering time)\n",
     "total_gens = n_samples * n_alphas * n_modes * 2  # 2 tasks\n",
     "\n",
     "print(\"=\"*60)\n",
@@ -2407,7 +2408,7 @@
     "print(\"=\"*60)\n",
     "print(f\"Samples per experiment: {n_samples}\")\n",
     "print(f\"α values (calibrated): {[f'{a:.2f}' for a in STEERING_ALPHAS]}\")\n",
-    "print(f\"Steering modes: layer_12, layer_20, multi (both layers)\")\n",
+    "print(f\"Steering modes: layer_12, layer_20\")\n",
     "print(f\"Total generations: {total_gens}\")\n",
     "\n",
     "# Get test data\n",
@@ -2502,7 +2503,7 @@
     "    alphas = experiment['alphas']\n",
     "    results_list = []\n",
     "    \n",
-    "    for mode in ['layer_12', 'layer_20', 'multi']:\n",
+    "    for mode in ['layer_12', 'layer_20']:\n",
     "        if mode not in experiment['per_mode']:\n",
     "            continue\n",
     "        \n",
@@ -2602,7 +2603,7 @@
     "        \n",
     "        # Compare modes at their best α\n",
     "        print(f\"\\n  Mode Comparison (at best α for each):\")\n",
-    "        for mode in ['layer_12', 'layer_20', 'multi']:\n",
+    "        for mode in ['layer_12', 'layer_20']:\n",
     "            mode_data = non_baseline[non_baseline['mode'] == mode]\n",
     "            if len(mode_data) > 0:\n",
     "                best_mode_idx = mode_data['reduction_vs_baseline'].idxmax()\n",
@@ -2664,8 +2665,8 @@
     "gs = fig.add_gridspec(3, 3, hspace=0.35, wspace=0.3)\n",
     "\n",
     "# Color scheme for modes\n",
-    "mode_colors = {'layer_12': '#3498db', 'layer_20': '#e74c3c', 'multi': '#27ae60'}\n",
-    "mode_labels = {'layer_12': 'Layer 12', 'layer_20': 'Layer 20', 'multi': 'Multi-Layer'}\n",
+    "mode_colors = {'layer_12': '#3498db', 'layer_20': '#e74c3c', }\n",
+    "mode_labels = {'layer_12': 'Layer 12', 'layer_20': 'Layer 20', }\n",
     "\n",
     "# ============================================================================\n",
     "# 1. DETECTION ROC-AUC COMPARISON BY LAYER\n",
@@ -2699,7 +2700,7 @@
     "# ============================================================================\n",
     "ax2 = fig.add_subplot(gs[0, 1:3])\n",
     "\n",
-    "for mode in ['layer_12', 'layer_20', 'multi']:\n",
+    "for mode in ['layer_12', 'layer_20']:\n",
     "    mode_data = halluc_analysis[halluc_analysis['mode'] == mode]\n",
     "    if len(mode_data) > 0:\n",
     "        ax2.plot(mode_data['alpha'], mode_data['halluc_rate'] * 100, 'o-',\n",
@@ -2718,7 +2719,7 @@
     "# ============================================================================\n",
     "ax3 = fig.add_subplot(gs[1, 0])\n",
     "\n",
-    "for mode in ['layer_12', 'layer_20', 'multi']:\n",
+    "for mode in ['layer_12', 'layer_20']:\n",
     "    mode_data = safety_analysis[safety_analysis['mode'] == mode]\n",
     "    if len(mode_data) > 0:\n",
     "        ax3.plot(mode_data['alpha'], mode_data['mean_toxicity'], 'o-',\n",
@@ -2737,7 +2738,7 @@
     "\n",
     "# Get best reduction for each mode (at any non-zero α)\n",
     "best_reductions = {'halluc': {}, 'safety': {}}\n",
-    "for mode in ['layer_12', 'layer_20', 'multi']:\n",
+    "for mode in ['layer_12', 'layer_20']:\n",
     "    h_data = halluc_analysis[(halluc_analysis['mode'] == mode) & (halluc_analysis['alpha'] > 0)]\n",
     "    s_data = safety_analysis[(safety_analysis['mode'] == mode) & (safety_analysis['alpha'] > 0)]\n",
     "    if len(h_data) > 0:\n",
@@ -2745,7 +2746,7 @@
     "    if len(s_data) > 0:\n",
     "        best_reductions['safety'][mode] = s_data['reduction_vs_baseline'].max()\n",
     "\n",
-    "modes = ['layer_12', 'layer_20', 'multi']\n",
+    "modes = ['layer_12', 'layer_20']\n",
     "x = np.arange(len(modes))\n",
     "width = 0.35\n",
     "\n",
@@ -3069,7 +3070,7 @@
     "\n",
     "# Find the best α for each mode\n",
     "best_configs = {}\n",
-    "for mode in ['layer_12', 'layer_20', 'multi']:\n",
+    "for mode in ['layer_12', 'layer_20']:\n",
     "    mode_data = halluc_analysis[(halluc_analysis['mode'] == mode) & (halluc_analysis['alpha'] > 0)]\n",
     "    if len(mode_data) > 0:\n",
     "        best_idx = mode_data['reduction_vs_baseline'].idxmax()\n",
@@ -3102,7 +3103,7 @@
     "        if i < len(steered):\n",
     "            steer = steered[i]\n",
     "            steer_status = \"HALLUC\" if steer['hallucinated'] else \"OK\"\n",
-    "            emoji = {'layer_12': '🔵', 'layer_20': '🔴', 'multi': '🟢'}[mode]\n",
+    "            emoji = {'layer_12': '🔵', 'layer_20': '🔴'}[mode]\n",
     "            print(f\"\\n  {emoji} {mode.upper()} (α={best_alpha:.2f}) [{steer_status}]:\")\n",
     "            print(f\"     {steer['text'][:150]}...\")\n",
     "\n",
@@ -3118,7 +3119,7 @@
     "    print(f\"Prompt: {base['prompt'][:60]}...\")\n",
     "    print(f\"  Baseline toxicity: {base['toxicity']:.4f}\")\n",
     "    \n",
-    "    for mode in ['layer_12', 'layer_20', 'multi']:\n",
+    "    for mode in ['layer_12', 'layer_20']:\n",
     "        mode_data = safety_analysis[(safety_analysis['mode'] == mode) & (safety_analysis['alpha'] > 0)]\n",
     "        if len(mode_data) > 0:\n",
     "            best_alpha = mode_data.loc[mode_data['reduction_vs_baseline'].idxmax(), 'alpha']\n",
@@ -3197,18 +3198,6 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.12.12"
   }
  },
  "nbformat": 4,
